--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
+    "@energiz3r/component-library": "0.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
